[package]
name = "rsn_db"
version = "0.1.0"
edition = "2021"
description = "A lightweight Rust-powered embedded database exposed as a Python package"
license = "MIT"

[lib]
name = "rsn_db"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
csv = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
