[package]
name = "rsn_db"
version = "0.2.1"
edition = "2021"
description = "A lightweight Rust-powered embedded database exposed as a Python package"
license = "MIT"

[lib]
name = "rsn_db"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
csv = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
bincode = "1.3"
lz4_flex = "0.11"
petgraph = "0.6"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
