[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rsn_db"
version = "0.4.6"
description = "Rust-powered embedded database for Python: encryption, GraphRAG, MemPalace AI memory, and an agent-friendly CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "RSN DB Contributors" }]
license = { text = "MIT" }
keywords = ["database", "embedded", "rust", "mempalace", "graphrag", "ai-memory"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
mempalace = ["mempalace>=3.3.5,<4"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mempalace>=3.3.5,<4",
]

[project.scripts]
rsn = "rsn_db.cli:main"
rsn-db = "rsn_db.cli:main"

[project.urls]
Homepage = "https://github.com/Enderchefcoder/RSN_DB"
Documentation = "https://github.com/Enderchefcoder/RSN_DB#documentation"
Repository = "https://github.com/Enderchefcoder/RSN_DB"

[tool.maturin]
abi3 = true
python-source = "python"
module-name = "rsn_db._core"
features = ["pyo3/extension-module"]

[tool.coverage.run]
source = ["python/rsn_db"]
omit = ["*/_core*"]

[tool.coverage.report]
fail_under = 99
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
    "raise SystemExit",
]

show_missing = true
